--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,43 +18,76 @@ loading {
 loading {
   animation: 2s linear infinite RefreshedLoadingBarProgress,
     0.5s ease-out LoadingBarEnter;
-  background: linear-gradient(
-    to right,
-    var(--gradient-yellow),
-    var(--gradient-orange),
-    var(--gradient-pink),
-    var(--gradient-lavender),
-    var(--gradient-purple),
-    var(--gradient-yellow)
-  );
+  background: linear-gradient(to right,
+      var(--gradient-yellow),
+      var(--gradient-orange),
+      var(--gradient-pink),
+      var(--gradient-lavender),
+      var(--gradient-purple),
+      var(--gradient-yellow));
   background-size: 500%;
   height: 6px;
   transform-origin: left;
   width: 100%;
 }
+
 @keyframes RefreshedLoadingBarProgress {
   0% {
     background-position: 125% 0;
   }
+
   100% {
     background-position: 0% 0;
   }
 }
+
 @keyframes LoadingBarEnter {
   0% {
     transform: scaleX(0);
   }
+
   100% {
     transform: scaleX(1);
   }
 }
 
 @keyframes shake {
-  0%, 100% { transform: translateX(0); }
-  25% { transform: translateX(-5px); }
-  75% { transform: translateX(5px); }
+
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  25% {
+    transform: translateX(-5px);
+  }
+
+  75% {
+    transform: translateX(5px);
+  }
 }
 
 .animate-shake {
   animation: shake 0.3s;
+}
+
+.uloader {
+  width: 17px;
+  height: 17px;
+  border: 3px solid #000000;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
